<resources>
    <string name="app_name">androidapp-unicon</string>
    <string name="title_activity_controller">ControllerActivity</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_title">The Universal Controller</string>

    <!--Controller Buttons-->
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="z">Z</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="start">Start</string>
    <string name="cu">CU</string>
    <string name="cd">CD</string>
    <string name="cl">CL</string>
    <string name="cr">CR</string>


</resources>
